# application

./: .gitignore  AGENTS.md  MULTI_WORKER_IMPLEMENTATION.md  TESTING_GUIDE.md
client/: .env.template  (+5 more)
server/: .env.template  .gitignore  AGENTS.md  __init__.py  alembic.ini  logging_config.py  main.py  pyproject.toml  requirements.txt  settings.py
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_timestamp_date_fields.py  (+19 more)
server/api/: __init__.py  docs.py  health.py  main.py  stats.py
server/auth/: dependencies.py  models.py  router.py  service.py  token_manager.py
server/cache/: __init__.py  decorator.py  invalidation.py  keys.py  serialization.py
server/config/: README.md  __init__.py  postgres.py  qdrant.py  redis.py  settings.py  surrealdb.py
server/core/: __init__.py  worker_sync.py
server/database/: __init__.py  engine.py  init_db.py
server/devdata/: disk_metadata.py  models.py  qdrant_snapshot_models.py  qdrant_snapshot_service.py  service.py  snapshot_models.py  snapshot_service.py  subprocess_handler.py
server/devdata_qdrant/: __init__.py  dependencies.py  mappers.py
server/docs_content/: docs_routes.json  search_index.json
server/jobs/: __init__.py  engine.py  models.py
server/middleware/: __init__.py  request_logging.py
server/pipelines/: __init__.py  models.py  router.py  service.py  storage.py  upload_tracker.py  validation.py
server/scripts/: __init__.py  generate_mock_org_data.py  generate_mock_risk_data.py  ingest_context_providers.py  snapshot_cli.py
server/workers/: __init__.py  celery_app.py
(+412 files in other folders)
