[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "msal>=1.34.0",
    "numpy>=2.4.1",
    "loguru>=0.7.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "surrealdb>=1.0.8",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.46",
    "tuspyserver>=4.2.3",
]
